--- a/bathtub_web/join.html
+++ b/bathtub_web/join.html
@@ -27,6 +27,6 @@
 <script src="js/weui.js?t=1564999427150" type="text/javascript" charset="utf-8"></script>
 <script src="js/socket.io.js?t=1564999427150" type="text/javascript" charset="utf-8"></script>
 <script src="js/shake.min.js?t=1564999427150" type="text/javascript" charset="utf-8"></script>
-<script src="js/shaked.min.js?t=1564999427150" type="text/javascript" charset="utf-8"></script>
+<script src="js/shaked.js?t=1564999427150" type="text/javascript" charset="utf-8"></script>
 </body>
 </html>
