--- a/g6/index.html
+++ b/g6/index.html
@@ -71,7 +71,7 @@
         maxIteration: data.nodes.length
       },
       modes: {
-        default: ['drag-canvas', 'drag-node'],
+        default: ['drag-canvas', 'zoom-canvas'],
       },
       defaultEdge: {
         type: 'line',
